version/0.11/_sources/api/core/settings/_autosummary/api/solution_root.rst.txt
:orphan:

.. _solution_root:

solution_root
=============

.. currentmodule:: ansys.systemcoupling.core.adaptor.api_25_2.solution_root

.. autoclass:: solution_root
    :show-inheritance:
    :undoc-members:
.. rubric:: Commands

========================================================   ================================================================================

Command                                                                                                                             Summary

========================================================   ================================================================================
:ref:`abort <abort>`                                                                                            Aborts a solve in progress.

:ref:`connect_ensight_dvs <connect_ensight_dvs>`                   Allow System Coupling to create DVS clients and connect these clients to

:ref:`create_restart_point <create_restart_point>`                       Interactive command that creates a restart point at the end of the

:ref:`get_machines <get_machines>`                                        Get a list of dictionaries with machine names and core counts for

:ref:`get_transformation <get_transformation>`                        Given an interface and side, returns the resultant transformation, in

:ref:`initialize <initialize>`                                                     Interactive command that initializes a coupled analysis.

:ref:`interrupt <interrupt>`                                                                                Interrupts a solve in progress.

:ref:`map <map>`                                                                                          Command to perform map operation.

:ref:`open_results_in_ensight <open_results_in_ensight>`                 Allows for System Coupling results to be postprocessed in EnSight.

:ref:`partition_participants <partition_participants>`          Provide a utility for setting the parallel algorithm, parallel partitioning

:ref:`show_plot <show_plot>`                                              Shows plots of transfer values and convergence for data transfers

:ref:`shutdown <shutdown>`                                                          Interactive command that shuts down a coupled analysis.

:ref:`solve <solve>`                                                           Solves the coupled analysis. This command will execute until

:ref:`step <step>`                                                     Interactive command that initializes the analysis (if necessary) and

:ref:`update_interfaces <update_interfaces>`                        Command to apply transformation and instance defined in the interfaces.

:ref:`write_csv_chart_files <write_csv_chart_files>`                  For each coupling interface, exports a CSV file containing chart data

:ref:`write_ensight <write_ensight>`                                Write a file with mesh and results which can be loaded into EnSight for

:ref:`write_target_data <write_target_data>`                   Command to write target data for target participant after mapping operation.

========================================================   ================================================================================

